--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ service:
     image: mariadb:10.5
     restart: always
     command: --default-authentication-plugin=
-  mysql_native_password
+  mysql_native_password:
     volumes:
       - "/srv/pterodactyl/database:/var/lib/mysql"
     environment:
