--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,8 +31,7 @@ service:
   database:
     image: mariadb:10.5
     restart: always
-    command: --default-authentication-plugin=
-  mysql_native_password:
+    command: --default-authentication-plugin= mysql_native_password
     volumes:
       - "/srv/pterodactyl/database:/var/lib/mysql"
     environment:
